syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.pacemaker.proto.services";
option java_outer_classname = "SecretServiceOuter";

import "secrets.proto";

service SecretsService {
    rpc create (SecretsCreateRequest) returns (SecretsResponse);
}


message SecretsCreateRequest {
    repeated pacemaker.Secret secrets = 1;
}


message SecretsResponse {

}